--- a/app/views/cooperate_reservation/choose_rooms.html.erb
+++ b/app/views/cooperate_reservation/choose_rooms.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: "/cooperate_reservation/new", method: :post do |form| %>
+<%= form_with url: "/cooperate_reservation/new", method: :get do |form| %>
 
   <div class="row">
     <div class="dropdown col-md">
@@ -27,52 +27,16 @@
     </div>
 
     <div class="btn btn-primary col-md-2" onclick="searchRooms()">Tìm kiếm</div>
-    <%# end %>
   </div>
   <br>
-  <div class="card">
-    <div class="card-header">
-      <h5>Chọn phòng nhanh</h5>
-    </div>
-    <div class="card-body">
-      <span class="btn btn-primary" style="float:right">Thêm</span>
-      <div class="row">
-        <div class="dropdown col-md">
-          <%= form.collection_select nil, RoomType.all, :id, :name,{include_blank: false, selected: params[:room_type_id]}, {class: 'form-select', id:'choose_room_type'}%>
-        </div>
-        <div class="dropdown col-md">
-          <%= form.text_field :arrival_date,
-                              data: {
-                                controller: "flatpickr",
-                                flatpickr_date_format: "d/m/Y",
-                                flatpickr_min_date: Time.zone.now
-                              },
-                              class: "form-select read-only-white",
-                              placeholder: "Ngày đến"%>
-        </div>
-        <div class="dropdown col-md">
-          <%= form.text_field :leave_date,
-                              data: {
-                                controller: "flatpickr",
-                                flatpickr_date_format: "d/m/Y",
-                                flatpickr_min_date: Time.zone.now
-                              },
-                              class: "form-select read-only-white",
-                              placeholder: "Ngày đi"%>
-
-        </div>
-
-        <div>
-
-        </div>
-
-        <br>
-      </div>
-      <span class="btn btn-primary">Chọn nhanh</span>
-    </div>
-  </div>
+  <%= render :partial => 'quick_choose_rooms', :locals=>{:form=>form} %>
   <br>
+  <div class="btn btn-primary", style="float:right">
+    Thanh toán
+  </div>
 
+  <br> <br>
+  <br>
   <div class="row w-100">
     <div class="col-lg">
       <!--    Bảng kết quả tìm kiếm -->
@@ -119,6 +83,7 @@
       <% end %>
     </div>
   </div>
+
 
 <% end %>
 
