--- a/app/views/cooperate_reservation/choose_rooms.html.erb
+++ b/app/views/cooperate_reservation/choose_rooms.html.erb
@@ -122,24 +122,24 @@
     }
 
     function pay(){
-
-        // var markers = [{ "position": "128.3657142857143", "markerPosition": "7" },
-        //     { "position": "235.1944023323615", "markerPosition": "19" },
-        //     { "position": "42.5978231292517", "markerPosition": "-3" }];
+        var chosen_rooms = []
+        let i = 0
+        for (i in rooms)
+        {
+            let room = {id: rooms[i]};
+            chosen_rooms.push(room)
+        }
         $.ajax({
             type: "POST",
             url: "/cooperate_reservation/choose_rooms",
             // The key needs to match your method's input parameter (case-sensitive).
-            data: JSON.stringify({ Rooms: rooms }),
-
-            contentType: "application/json; charset=utf-8",
-            // dataType: "json",
-            // success: function(data){
-            //     // alert(data);
-            //     },
-            // error: function(errMsg) {
-            //     // alert(errMsg);
-            // }
+            data: JSON.stringify(
+                {
+                    arrival_date: $('#arrival_date').val(),
+                    leave_date: $('#leave_date').val(),
+                    rooms: chosen_rooms
+                }),
+            contentType: "application/json; charset=utf-8"
         });
     }
     $('.toggle-list').on('click' ,function(e) {
