--- a/app/views/cooperate_reservation/_step1.html.erb
+++ b/app/views/cooperate_reservation/_step1.html.erb
@@ -81,6 +81,51 @@
   <%= form.hidden_field(:client_name) %>
   <%= form.hidden_field(:client_citizen_id) %>
 </div>
+<br><br>
+<h4>Những phòng đã chọn</h4>
+<table class="table">
+  <thead>
+  <tr>
+    <th scope="col">Leader</th>
+    <th scope="col">Phòng</th>
+    <th scope="col">Ngày vào</th>
+    <th scope="col">Ngày ra</th>
+    <th scope="col">Người lớn</th>
+    <th scope="col">Trẻ em</th>
+    <th scope="col">Tên khách</th>
+    <th scope="col">CMND</th>
+    <th scope="col"></th>
+  </tr>
+  </thead>
+  <tbody>
+<% @chosen_rooms.each do |r|%>
+
+  <tr>
+    <th>
+      <div class="form-check">
+        <% if r == @chosen_rooms[0] %>
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+        <% else %>
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+
+      <% end %>
+
+      </div>
+
+    </th>
+    <td><%= r["id"] %></td>
+    <td><%= @arrival_date %></td>
+    <td><%= @leave_date %></td>
+    <td>0</td>
+    <td>0</td>
+    <td>N/A</td>
+    <td>N/A</td>
+  </tr>
+  <% end %>
+  </tbody>
+</table>
+
+
 <script>
     $('#_client_attributes_name').keyup(function(){
         $('#client_name').val($('#_client_attributes_name').val());
